envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: httpbin
          http_filters:
          - name: wasmdemo
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: wasmdemo
                  vm_config:
                    runtime: envoy.wasm.runtime.v8
                    code:
                      local:
                        filename: /etc/envoy/main.wasm
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: |
                      {
                        "reverse_proxy": false,
                        "redirect_url": "http://localhost/oauth2/callback",
                        "oidc_issuer_url": "https://dev-o43xb1mz7ya7ach4.us.auth0.com/",
                        "provider": "oidc",
                        "insecure_oidc_allow_unverified_email": true,
                        "client_id": "YagFqRD9tfNIaac5BamjhsSatjrAnsnZ",
                        "client_secret": "ekqv5XoZuMFtYms1NszEqRx03qct6BPvGeJUeptNG4y09PrY16BKT9IWezTrrhJJ",
                        "scope": "openid email",
                        "authenticated_emails_file": "",
                        "ssl_insecure_skip_verify": false,
                        "cookie_name": "_oauth2_proxy",
                        "cookie_secret": "1234567891012345",
                        "cookie_secure": true,
                        "cookie_httponly": true,
                        "service_domain": "dev-o43xb1mz7ya7ach4.us.auth0.com",
                        "service_name": "auth",
                        "service_port": 443,
                        "service_source": "dns"
                      }
          - name: envoy.filters.http.router
  clusters:
  - name: httpbin
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin
                port_value: 80
